--- a/channel-partners.html
+++ b/channel-partners.html
@@ -96,7 +96,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="ip-banner-image gs_reveal gs_reveal_fromRight">
-            <img src="images/inner-page-banner-2.png" alt="img">
+            <img src="images/partner.png" alt="img">
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
                 </div>
 
                 <video controls class="video" id="video" preload="metadata" poster="images/thuumbnail-img.png">
-                  <source src="videos/plinthstone-your-partner-in-success-singal.mp4" type="video/mp4">
+                  <source src="videos/plinthstone-your-partner-in-success2.mp4" type="video/mp4">
                   </source>
                 </video>
                 <!-- Video Controls Main -->
