--- a/developers.html
+++ b/developers.html
@@ -130,7 +130,7 @@
   <section class="singal-video-section cp-sv">
     <div class="container">
       <div class="row">
-        <div class="col-8 offset-2">
+        <div class="col-lg-8 offset-lg-2">
           <div class="video-singal-main">
             <div class="video-part gs_reveal gs_reveal_fromLeft">
               <div class="video-container" id="video-container">
