--- a/projects.html
+++ b/projects.html
@@ -159,7 +159,7 @@
                       </div>
                       <div class="property-type">
                         <a href="#">
-                          1 -2 BHK
+                          1.5 - 2.5 BHK
                         </a>
                       </div>
                     </div>
