--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <!-- </svg> -->
           <!-- </div> -->
         <!-- </div> -->
-        <div class="col-lg-8 offset-2 text-center">
+        <div class="col-lg-8 offset-lg-2 text-center">
           <div class="content-part-partners gs_reveal gs_reveal_fromRight">
             <h2>Our employees cumulative experience
             </h2>
@@ -467,7 +467,7 @@
                       </div>
                       <div class="property-type">
                         <a href="#">
-                          1 -2 BHK
+                          1.5 - 2.5 BHK
                         </a>
                       </div>
                     </div>
